--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -1,5 +1,9 @@
 {%extends 'front/master.html'%}
 
+{% block headblock %}
+<title>{{site.name}} | Home</title>
+{% endblock %}
+
 {%block mainblock%}
 	<!-- Feature post -->
 	<section class="bg0">
