--- a/main/templates/back/news_add.html
+++ b/main/templates/back/news_add.html
@@ -56,6 +56,11 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <div class="col-md-3">
+                                <input type="file" id="myfile" name="myfile" rows="5" class="form-control" placeholder="body of text"></input>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <div class="col-md-12">
                                 <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Submit</button>
                             </div>
