--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -273,7 +273,7 @@
 							<!-- Item latest -->	
 							<div class="m-b-45">
 								<a href="{%url 'news_detail' word=i.name%}" class="wrap-pic-w hov1 trans-03">
-									<img src="{% static 'front/images/post-05.jpg' %}" alt="IMG">
+									<img src="{{i.picurl}}" alt="IMG">
 								</a>
 
 								<div class="p-t-16">
