--- a/main/templates/back/master.html
+++ b/main/templates/back/master.html
@@ -144,7 +144,33 @@
                                 </li>
 
                                 <li>
-                                    <a href="#" class="sidebar-nav-menu"><i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="gi gi-show_big_thumbnails sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">Page Layouts</span></a>
+                                    <a href="#" class="sidebar-nav-menu"><i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="gi gi-show_big_thumbnails sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">Category</span></a>
+                                    <ul>
+                                        <li>
+                                            <a href="panel/category/add">Add Category</a>
+                                        </li>
+                                        <li>
+                                            <a href="panel/category/list/">Categories List</a>
+                                        </li>
+                  
+ 
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#" class="sidebar-nav-menu"><i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="gi gi-show_big_thumbnails sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">SubCategory</span></a>
+                                    <ul>
+                                        <li>
+                                            <a href="panel/subcategory/add">Add SubCategory</a>
+                                        </li>
+                                        <li>
+                                            <a href="panel/subcategory/list/">SubCategories List</a>
+                                        </li>
+                  
+ 
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#" class="sidebar-nav-menu"><i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="gi gi-show_big_thumbnails sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">News</span></a>
                                     <ul>
                                         <li>
                                             <a href="/panel/news/add">Add News</a>
