--- a/main/templates/back/news_add.html
+++ b/main/templates/back/news_add.html
@@ -38,10 +38,9 @@
                             </div>
                             <div class="col-md-6">
                                 <select id="newscat" name="newscat" class="select-chosen" data-placeholder="Choose a Category.." style="width: 250px;">
-                                    <option></option><!-- Required for data-placeholder attribute to work with Chosen plugin -->
-                                    <option value="cat1">Cat1</option>
-                                    <option value="cat2">Cat2</option>
-                                    <option value="cat3">Cat3</option>
+                                    {%for i in cat%}
+                                    <option value=" {{i.pk}} "> {{i.catname}} | {{i.name}} </option>
+                                    {%endfor%}
                                 </select>
                             </div>
                         </div>
