--- a/main/templates/back/news_add.html
+++ b/main/templates/back/news_add.html
@@ -34,7 +34,7 @@
                     <!-- END Form Elements Title -->
 
                     <!-- Basic Form Elements Content -->
-                    <form action="{%url 'news_add'%}" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered" >
+                    <form action="{%url 'news_add' %}" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered" >
                         {%csrf_token%}
                         <div class="form-group">
                             <div class="col-md-6">
@@ -50,20 +50,20 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <textarea type="text" id="newstxtshort" name="newstxtshort" rows="5" class="form-control" placeholder="Short text"></textarea>
+                                <textarea type="text" id="newstxtshort" name="newstxtshort" rows="5" class="form-control" placeholder="Short text">short txt</textarea>
                             </div>
                         </div>
-                        <script>
-                            CKEDITOR.replace( 'newstxtshort' );
-                        </script>
+                            <script>
+                                CKEDITOR.replace( 'newstxtshort' );
+                            </script>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <textarea type="text" id="newstxt" name="newstxt" rows="5" class="form-control" placeholder="body of text"></textarea>
+                                <textarea type="text" id="newstxt" name="newstxt" rows="5" class="form-control" placeholder="body of text">body txt</textarea>
                             </div>
                         </div>
-                        <script>
-                            CKEDITOR.replace( 'newstxt' );
-                        </script>
+                            <script>
+                                CKEDITOR.replace( 'newstxt' );
+                            </script>
                         <div class="form-group">
                             <div class="col-md-3">
                                 <input type="file" id="myfile" name="myfile" rows="5" class="form-control" placeholder="body of text"></input>
